Updated colors, name, and some links.

--- a/html/startpage.html
+++ b/html/startpage.html
@@ -8,24 +8,24 @@
 padding:30px;
 margin:auto;
 font-family:"Open Sans";
-color:#A0A0A0
+color:#88877C
 }
 
 a:hover{
 font-family:"Open Sans";
-color:#A0A0A0
+color:#88877C
 }
 a:link{
 font-family:"Open Sans";
-color:#A0A0A0
+color:#88877C
 }
 a:active{
 font-family:"Open Sans";
-color:#A0A0A0
+color:#88877C
 }
 a:visited{
 font-family:"Open Sans";
-color:#A0A0A0
+color:#88877C
 }
 .centergray{
 font-family:"Open Sans";
@@ -49,16 +49,16 @@ padding-left: 30px;
 }
 </style>
 </head>
-<body style="background-color:#232323"> 
+<body style="background-color:#1D1E1D"> 
 <div class="div1">
 
 <div class="float">
 <!--You can replace ubuntu2.png with your own picture if you want-->
-<img src="/home/emily/.oslogo.png" height="100" width="100" />
+<img src="/home/amelia/.oslogo.png" height="100" width="100" />
 </div>
 
 <div class="float">
-<h1 class="centergray">good day, emily</h1>
+<h1 class="centergray">good day, amelia</h1>
 </div>
 
 <div class="clear"></div>
@@ -72,8 +72,24 @@ padding-left: 30px;
 <li><a href="http://reddit.com/me/m/fossmovement">foss movement</a></li>
 <li><a href="http://reddit.com/me/m/gaming">gaming</a></li>
 <li><a href="http://reddit.com/me/m/gsm">gsm</a></li>
-<li><a href="http://reddit.com/r/dota2">dota 2</a></li>
-<li><a href="http://reddit.com/r/globaloffensive">cs:go</a></li>
+<li><a href="http://reddit.com/r/wicca">wicca</a></li>
+</ul>
+<hr class="medleft" width="30%" align="left">
+
+
+<h2 class="centergray">info</h2>
+
+<ul>
+<li><a href="https://duckduckgo.com">duckduckgo</a></li>
+<li><a href="https://wiki.archlinux.org/">arch wiki</a></li>
+<li><a href="https://www.freebsd.org/docs.html">freebsd documentation</a></li>
+</ul>
+
+<hr class="medleft" width="30%" align="left">
+
+<h2 class="centergray">misc</h2>
+<ul>
+<li><a href="http://feedly.com">feedly</a></li>
 </ul>
 
 <hr class="medleft" width="30%" align="left">
@@ -84,18 +100,8 @@ padding-left: 30px;
 <li><a href="http://4chan.org/vg/">/vg/</a></li>
 <li><a href="http://4chan.org/wg/">/wg/</a></li>
 </ul>
-<hr class="medleft" width="30%" align="left">
 
-<h2 class="centergray">info</h2>
-
-<ul>
-<li><a href="https://duckduckgo.com">duckduckgo</a></li>
-<li><a href="https://wiki.archlinux.org/">arch wiki</a></li>
-<li><a href="https://www.freebsd.org/docs.html">freebsd documentation</a></li>
-</ul>
 <br>
-
-
 </div>
 </body>
 
