Refactored bspwmrc to function asynchronously, improving performance pretty dramatically

--- a/html/startpage.html
+++ b/html/startpage.html
@@ -54,7 +54,7 @@ padding-left: 30px;
 
 <div class="float">
 <!--You can replace ubuntu2.png with your own picture if you want-->
-<img src="/home/amelia/.oslogo.png" height="100" width="100" />
+<img src="/home/amelia/.avatar.png" height="100" width="100" />
 </div>
 
 <div class="float">
